err/voxgenerator.err
Listing '.'...
Listing './bin'...
Compiling './bin/run_voxgenerator.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/voxgenerator'...
Listing './lib/python3.5/site-packages/voxgenerator/core'...
Listing './lib/python3.5/site-packages/voxgenerator/generator'...
Compiling './lib/python3.5/site-packages/voxgenerator/generator/model_generator.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/generator/model_generator.py", line 42
    print "XML plugin file " + xml + " is not valid !"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/voxgenerator/generator/plugin_generator.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/generator/plugin_generator.py", line 21
    print "XML file: " + xml + "  not valid !"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/voxgenerator/pipeline'...
Compiling './lib/python3.5/site-packages/voxgenerator/pipeline/selector.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/pipeline/selector.py", line 68
    print "Plugin " + plugin + " is not a valid plugin name, please give a valid one !\n"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/voxgenerator/pipeline/test_pipeline.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/pipeline/test_pipeline.py", line 48
    print "result: " + text
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/voxgenerator/plugin'...
Compiling './lib/python3.5/site-packages/voxgenerator/plugin/command_selector.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/plugin/command_selector.py", line 106
    print "The dic file " + filepath + " is not found"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/voxgenerator/service'...
Compiling './lib/python3.5/site-packages/voxgenerator/service/display.py'...
***   File "./lib/python3.5/site-packages/voxgenerator/service/display.py", line 27
    print x.__compute_active_window__()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/voxgenerator-1.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
